--- a/src/app/quote/quote-new/quote-new.component.css
+++ b/src/app/quote/quote-new/quote-new.component.css
@@ -4,11 +4,9 @@
   font-family: 'Trebuchet MS', Avenir, sans-serif;
 }
 
-fieldset {
-  display: inline-block;
+section {
   margin-bottom: 15px;
-  padding: 10px 15px;
-  border: none;
+  padding: 20px 25px;
 }
 
 textarea {
