--- a/src/app/quote/quote-list/quote-list.component.html
+++ b/src/app/quote/quote-list/quote-list.component.html
@@ -4,9 +4,9 @@
     <p>"{{ quote.quote }}" <br> - {{ quote.author }}</p>
     <p class="vote"><span *ngIf="quote.votes > 0">+</span>{{ quote.votes }}</p>
     <div class="buttons">
-      <button class="green">Vote Up</button><br>
-      <button class="red">Vote Down</button><br>
-      <button class="gray">Delete</button><br>
+      <button class="green" (click)="voteUp(quote)">Vote Up</button><br>
+      <button class="red" (click)="voteDown(quote)">Vote Down</button><br>
+      <button class="gray" (click)="remove(quote)">Delete</button><br>
     </div>
   </div>
 </section>
